Visual bug fixes for website, mostly text and spacing updates (#3004)
* Updated text per Teams convo with Laura and Angela

* Reordered TextFieldPage to address recent addition hierarchy

* Example spacing improvement for TextField

* Fixed link to components page

* Updated SharePoint link text

* Padding fixes for content in grids. More rtl friendly.

* Fixed ComboBox error message spacing to match TextFIeld

* Gave ComboBox some breathing room like other examples have

* Added change files

--- a/apps/fabric-website/src/pages/Styles/BrandIconsPage/BrandIconsPage.module.scss
+++ b/apps/fabric-website/src/pages/Styles/BrandIconsPage/BrandIconsPage.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/variables';
 
 .paragraphInGrid {
-    padding-left: $contentInGrid;
+  @include ms-padding-left($contentInGrid);
 }
 
 .exampleIcons {
